ARMTemplates/VirtualMachine/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "storage_account_name": {
           "type": "string",
           "metadata": {
                "description": "Name of the storage acount"
            }
        },
        "vnet_name": {
           "type": "string",
           "metadata": {
                "description": "Name of the virtual network"
            }
        },
        "virtual_machine_name": {
           "type": "string",
           "metadata": {
                "description": "Name of the virtual machine"
            }
        },
        "vm_size": {
           "type": "string",
           "metadata": {
                "description": "size of the virtual machine"
            }
        },
        "adminuser": {
           "type": "string",
           "metadata": {
                "description": "description"
            }
        },
        "adminPassword": {
           "type": "string",
           "metadata": {
                "description": "description"
            }
        }
    },
    "variables": {
        "tags": {
            "createdy": "Ramakrishna",
            "Environment": "DEV",
            "Project": "SAANVIKIT"
        },
        "public_ip_name": "saanvikit-pubip-01",
        "nsg_name": "saanvikit-nsg-01",
        "vnet_addressPrefixes": ["192.168.0.0/24"],
        "subnet_name": "saanvikit-snet",
        "subnet_addressPrefix": "192.168.0.0/27",
        "nic_name": "saanvikit-nic"
    },
    "resources": [
        {
            "name": "[toLower(parameters('storage_account_name'))]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2021-04-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage"
        },
        {
            "name": "[variables('public_ip_name')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic"
            } 
        },
        {
            "name": "[variables('nsg_name')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "description": "HTTP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('vnet_name')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg_name'))]"
            ],
            "tags": "[variables('tags')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": "[variables('vnet_addressPrefixes')]"
                },
                "subnets": [
                    {
                        "name": "[variables('subnet_name')]",
                        "properties": {
                            "addressPrefix": "[variables('subnet_addressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg_name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('nic_name')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('public_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnet_name'))]"
            ],
            "tags": "[variables('tags')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('public_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnet_name'), variables('subnet_name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('virtual_machine_name')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2021-03-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('nic_name'))]"
            ],
            "tags": "[variables('tags')]",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vm_size')]"
                },
                "osProfile": {
                    "computerName": "[parameters('virtual_machine_name')]",
                    "adminUsername": "[parameters('adminuser')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2022-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat(parameters('virtual_machine_name'),'-','osdisk')]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nic_name'))]"
                        }
                    ]
                }
            }
        }
    ],
    "outputs": {}
}
